// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a non-validated info 1`] = `
<Wrapper
  className="qs-Field--toValidate "
  field="field"
>
  <StyledIcon
    icon="not-validated"
    size={21}
  />
</Wrapper>
`;

exports[`renders a validated info 1`] = `
<Wrapper
  className="qs-Field--validated "
  field="field"
>
  <StyledIcon
    icon="validated"
    size={21}
  />
</Wrapper>
`;
